--- a/stripe/res/layout/card_multiline_widget.xml
+++ b/stripe/res/layout/card_multiline_widget.xml
@@ -1,28 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <com.stripe.android.view.IconTextInputLayout
         android:id="@+id/tl_add_source_card_number_ml"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/acc_label_card_number"
         android:layout_marginTop="@dimen/add_card_element_vertical_margin"
-        >
+        android:hint="@string/acc_label_card_number">
 
         <com.stripe.android.view.CardNumberEditText
             android:id="@+id/et_add_source_card_number_ml"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:digits="@string/valid_digits"
-            android:drawablePadding="@dimen/card_icon_multiline_padding"
             android:drawableStart="@drawable/ic_unknown"
+            android:drawablePadding="@dimen/card_icon_multiline_padding"
             android:imeOptions="actionNext"
             android:inputType="number"
             android:nextFocusDown="@+id/et_add_source_expiry_ml"
-            android:nextFocusForward="@+id/et_add_source_expiry_ml"
-            />
+            android:nextFocusForward="@+id/et_add_source_expiry_ml" />
 
     </com.stripe.android.view.IconTextInputLayout>
 
@@ -32,17 +30,16 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/add_card_element_vertical_margin"
         android:baselineAligned="false"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tl_add_source_expiry_ml"
+            style="@style/Widget.Design.TextInputLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/add_card_expiry_middle_margin"
             android:layout_weight="1"
-            android:hint="@string/acc_label_expiry_date"
-            >
+            android:hint="@string/acc_label_expiry_date">
 
             <com.stripe.android.view.ExpiryDateEditText
                 android:id="@+id/et_add_source_expiry_ml"
@@ -52,18 +49,17 @@
                 android:inputType="date"
                 android:maxLength="@integer/date_length"
                 android:nextFocusDown="@+id/et_add_source_cvc_ml"
-                android:nextFocusForward="@+id/et_add_source_cvc_ml"
-                />
+                android:nextFocusForward="@+id/et_add_source_cvc_ml" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tl_add_source_cvc_ml"
+            style="@style/Widget.Design.TextInputLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/add_card_expiry_middle_margin"
-            android:layout_weight="1"
-            >
+            android:layout_weight="1">
 
             <com.stripe.android.view.StripeEditText
                 android:id="@+id/et_add_source_cvc_ml"
@@ -73,17 +69,16 @@
                 android:imeOptions="actionNext"
                 android:inputType="numberPassword"
                 android:nextFocusDown="@+id/et_add_source_postal_ml"
-                android:nextFocusForward="@+id/et_add_source_postal_ml"
-                />
+                android:nextFocusForward="@+id/et_add_source_postal_ml" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tl_add_source_postal_ml"
+            style="@style/Widget.Design.TextInputLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            >
+            android:layout_weight="1">
 
             <!--In future releases we will remove the android:digits restriction
             to support international postal codes.-->
@@ -95,8 +90,7 @@
                 android:hint="@string/acc_label_zip"
                 android:imeOptions="actionDone"
                 android:inputType="number"
-                android:maxLength="5"
-                />
+                android:maxLength="5" />
 
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
